--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.4.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.10",
     "uuid": "^10.0.0"
   }
 }
