modified the ui and fixed some bugs

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,6 @@
+MONGODB_URI=mongodb+srv://manojkumaratmakuri:HOcDbgfwN4ABbXIc@flightsdb.xcnwl20.mongodb.net/?retryWrites=true&w=majority&appName=FlightsDB
 AUTH_EMAIL=manojkumaratmakuri@gmail.com
 AUTH_PASS=hovnironeowxxhke
+FRONTEND_URL=http://localhost:5173
+BASE_URL=http://localhost:3000/
+PORT=3000
