added some new features

--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,6 @@ AUTH_PASS=hovnironeowxxhke
 FRONTEND_URL=http://localhost:5173
 BASE_URL=http://localhost:3000/
 PORT=3000
+CLOUDINARY_CLOUD_NAME=dvphkxlgd
+CLOUDINARY_API_KEY=427286658827221
+CLOUDINARY_API_SECRET=vDiTdIS9-jYxeBQj5I3xXqAfsOw
